Opened 15 years ago

Closed 15 years ago

#6380 closed bug (fixed)

in PDF Writer setings directory missing encoding files

Reported by: damoklas Owned by: laplace
Priority: normal Milestone: R1
Component: Printing Version: R1/alpha2
Keywords: Cc: phoudoin
Blocked By: Blocking:
Platform: All

Description (last modified by laplace)

in PDF Writer setings directory missing encoding files, /boot/home/config/settings/PDF Writer:

t1enc0.enc
t1enc1.enc
t1enc2.enc
t1enc3.enc
t1enc4.enc
ttenc0.cpg
ttenc1.cpg
ttenc2.cpg
ttenc3.cpg
ttenc4.cpg

– that causing problems with encodings.

Change History (7)

comment:1 by phoudoin, 15 years ago

Cc: phoudoin added

comment:2 by laplace, 15 years ago

Thanks for reporting the problem. I am going to fix it soon.

Since PDF Writer is now a system component what would be the correct path for those files?

/boot/system/data/PDF Writer

comment:3 by laplace, 15 years ago

Status: newin-progress

comment:4 by laplace, 15 years ago

Description: modified (diff)

comment:5 by phoudoin, 15 years ago

What about /boot/common/settings/PDF Writer? Network settings, another system component, are located there.

BTW, may the lack of encoding files could explain #6240 ?

in reply to:  5 comment:6 by laplace, 15 years ago

Replying to phoudoin:

What about /boot/common/settings/PDF Writer? Network settings, another system component, are located there.

Good idea. The files are now copied to the Haiku image to that place in hrev37761.

BTW, may the lack of encoding files could explain #6240 ?

That could be. In a quick test the EUR currency symbol is now correctly shown in the PDF file.

Last edited 15 years ago by laplace (previous) (diff)

comment:7 by laplace, 15 years ago

Resolution: fixed
Status: in-progressclosed
Note: See TracTickets for help on using tickets.