* Added files used by PDF Writer to the image   (closed ticket #6380). * Changed path to /boot/common/settings. Someone feel free to change the implementation to get the path from find_directory(...).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@37761 a95241bf-73f2-0310-859d-f6bbb57e9c96